--- a/enrollment_form.css
+++ b/enrollment_form.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #d0c9ef;
+    background-color: #f6f9cc;
     margin: 0;
     padding: 20px;
   }
@@ -17,9 +17,9 @@ body {
   }
   
   form {
-    background-color: #fff;
+    background-color: #fcffee;
     padding: 30px;
-    border-radius: 8px;
+    border-radius: 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 60%;
     margin: 0 auto;
@@ -68,6 +68,7 @@ body {
   
   table {
     width: 100%;
+    border-radius: 50px;
     margin-top: 30px;
     background-color: #fff;
     border-collapse: collapse;
